--- a/src/css/global.scss
+++ b/src/css/global.scss
@@ -1,9 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
+
 body, html {
     margin: 0;
     padding: 0;
     width: 100%;
     height: 100%;
     overflow-x: hidden;
+    font-family: 'Poppins', sans-serif;
 }
 
 #app {
