--- a/src/css/home/home.scss
+++ b/src/css/home/home.scss
@@ -65,30 +65,6 @@
   z-index: 4; /* Ensure the paragraph is above the console background */
   font-size: 1.2rem;
   padding: 10px;
-
-  @media screen and (max-width: 1200px) {
-    font-size: 1.1rem;
-  }
-
-  @media screen and (max-width: 992px) {
-    font-size: 1rem;
-  }
-
-  @media screen and (max-width: 768px) {
-    font-size: 0.9rem;
-  }
-
-  @media screen and (max-width: 576px) {
-    font-size: 0.8rem;
-  }
-
-  @media screen and (max-width: 390px) {
-    font-size: 0.7rem;
-  }
-
-  @media screen and (max-width: 188) {
-    font-size: 0.6rem;
-  }
 }
 
 .home p::before {
@@ -151,7 +127,27 @@
   background: linear-gradient(0deg, rgba(30, 30, 30, 0.8) 0%, rgba(0, 0, 0, 0.8) 100%);
   border-radius: 5px;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
-  color: #4caf50; /* Green text to simulate code */
+  color: #4caf50;
+
+  @media screen and (max-width: 1200px) {
+    font-size: 1.1rem;
+  }
+
+  @media screen and (max-width: 992px) {
+    font-size: 1rem;
+  }
+
+  @media screen and (max-width: 768px) {
+    font-size: 0.9rem;
+  }
+
+  @media screen and (max-width: 576px) {
+    font-size: 0.7rem;
+  }
+
+  @media screen and (max-width: 410px) {
+    font-size: 0.6rem;
+  }
 }
 
 
