--- a/src/css/home/home.scss
+++ b/src/css/home/home.scss
@@ -22,8 +22,8 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.5); /* Black overlay with 50% opacity */
-  z-index: 2; /* Ensure overlay is above the bubbles but below the content */
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 2;
 }
 
 .home h1 {
@@ -62,7 +62,7 @@
   overflow: hidden;
   white-space: nowrap;
   animation: typing 4s steps(40, end), blink-caret .75s step-end infinite;
-  z-index: 4; /* Ensure the paragraph is above the console background */
+  z-index: 4;
   font-size: 1.2rem;
   padding: 10px;
 }
@@ -74,11 +74,11 @@
   left: -10px;
   right: -10px;
   bottom: -10px;
-  background: #1e1e1e; /* Dark background to simulate a console */
-  border: 2px solid #4caf50; /* Green border to simulate a console window */
+  background: #1e1e1e;
+  border: 2px solid #4caf50;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   border-radius: 5px;
-  z-index: -1; /* Place the console background behind the paragraph */
+  z-index: -1;
 }
 
 .home p::after {
@@ -121,9 +121,8 @@
   }
 }
 
-/* Additional styling for the console-like text */
 .home p {
-  font-family: 'Courier New', Courier, monospace; /* Console-like font */
+  font-family: 'Courier New', Courier, monospace;
   background: linear-gradient(0deg, rgba(30, 30, 30, 0.8) 0%, rgba(0, 0, 0, 0.8) 100%);
   border-radius: 5px;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
@@ -197,7 +196,7 @@
   flex-wrap: wrap;
   justify-content: center;
   padding: 20px;
-  position: relative; /* Ensure positioning context for circles */
+  position: relative;
 }
 
 $bubble-count: 50;
@@ -220,7 +219,7 @@ $sway-type: "sway-left-to-right", "sway-right-to-left";
   width: 100%;
   height: 100vh;
   overflow: hidden;
-  z-index: 1; /* Ensure bubbles are behind the content */
+  z-index: 1;
 }
 
 .bubble {
@@ -311,7 +310,7 @@ $sway-type: "sway-left-to-right", "sway-right-to-left";
   list-style: none;
   width: 20px;
   height: 20px;
-  background: rgba(255, 255, 255, 0.54); /* White circles */
+  background: rgba(255, 255, 255, 0.54);
   animation: animate 25s linear infinite;
   bottom: -150px;
 }
@@ -488,6 +487,14 @@ $sway-type: "sway-left-to-right", "sway-right-to-left";
   font-family: 'Open Sans';
   margin-top: 0.5em;
   line-height: 2em;
+}
+
+.finish {
+  text-align: center  ;
+  font-size: 0.75rem;
+  color: #FFA500; /* Orange color */
+  margin-bottom: 5px;
+  z-index: 3;
 }
 
 .learn-more {
