--- a/src/css/components/language.css
+++ b/src/css/components/language.css
@@ -1,8 +1,8 @@
 @import "~@fortawesome/fontawesome-free/css/all.css";
 .language-selector {
   position: fixed;
-  top: 10px;
-  right: 10px;
+  top: 25px;
+  right: 50px;
   z-index: 999;
   display: flex;
   align-items: center;
@@ -22,6 +22,17 @@
   z-index: 1;
   margin-left: 10px;
 }
+.language-selector select .flag-option {
+  padding-left: 25px;
+  background-repeat: no-repeat;
+  background-position: left center;
+}
+.language-selector select .en {
+  background-image: url("https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.4.6/flags/4x3/us.svg");
+}
+.language-selector select .fr {
+  background-image: url("https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.4.6/flags/4x3/fr.svg");
+}
 .language-selector option {
   padding: 10px;
   background: white;
@@ -33,20 +44,19 @@
 }
 @media screen and (max-width: 768px) {
   .language-selector {
-    top: 50px;
-    right: 10px;
+    top: 25px;
+    right: 25px;
   }
 }
 
-/* Adding the flags using FontAwesome */
 .flag-icon-us::before {
-  content: "\f1fa"; /* Unicode for the flag icon */
+  content: "\f1fa";
   font-family: "Font Awesome 5 Free";
   font-weight: 900;
 }
 
 .flag-icon-fr::before {
-  content: "\f1eb"; /* Unicode for the flag icon */
+  content: "\f1eb";
   font-family: "Font Awesome 5 Free";
   font-weight: 900;
 }/*# sourceMappingURL=language.css.map */
