--- a/src/css/patterns/singleton.scss
+++ b/src/css/patterns/singleton.scss
@@ -1,18 +1,21 @@
 .singleton {
     background: linear-gradient(to bottom, rgb(59, 59, 59), rgb(0, 0, 0));
-    color: white;
+    color: rgb(255, 255, 255);
     position: relative;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;  // Align items to the top
     align-items: center;
-    height: 100vh;
+    min-height: 100vh;  // Allow the height to extend beyond the viewport
     text-align: center;
-    overflow: hidden;
+    overflow-y: auto;  // Enable vertical scrolling
+}
+
+h2 {
+    color: white;
 }
 
 // Header section style
-
 .header {
     position: fixed;
     top: 0;
@@ -32,13 +35,48 @@
 }
 
 .title {
-    margin-left: 50%;
+    margin-left: 45%;
 }
 
 // Content section style
-
 .content {
-    margin-top: 60px;
+    color: black;
+    padding: 100px 20px 20px 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    max-width: 800px;
+    margin: 0 auto;
+}
+
+.introduction, .context, .warning, .advanced-content {
+    background: rgba(255, 255, 255, 0.6);
+    padding: 20px;
+    border-radius: 10px;
+    margin-bottom: 20px;
+    text-align: left;
+    width: 100%;
+}
+
+.introduction:hover {
+    background: rgba(86, 236, 99, 0.6);
+    box-shadow: 0 0 10px rgba(21, 231, 94, 0.6);
+}
+
+.context:hover {
+    background: rgba(79, 129, 228, 0.6);
+    box-shadow: 0 0 10px rgba(18, 104, 242, 0.6);
+}
+
+.warning:hover {
+    background: rgba(239, 68, 68, 0.6);
+    box-shadow: 0 0 10px rgba(255, 0, 0, 0.6);
+}
+
+.advanced-content:hover {
+    background: rgba(79, 129, 228, 0.6);
+    box-shadow: 0 0 10px rgba(18, 104, 242, 0.6);
 }
 
 // Responsive styles
@@ -62,6 +100,15 @@
         text-align: center;
         width: 100%;
     }
+
+    .content {
+        padding: 70px 10px 10px 10px;
+    }
+
+    .introduction, .context {
+        padding: 15px;
+        margin-bottom: 15px;
+    }
 }
 
 @media (max-width: 320px) {
@@ -83,5 +130,14 @@
         font-size: 0.8rem;
         text-align: center;
         width: 100%;
+    }
+
+    .content {
+        padding: 60px 5px 5px 5px;
+    }
+
+    .introduction, .context {
+        padding: 10px;
+        margin-bottom: 10px;
     }
 }
